fix image alignment for world banner

--- a/homepage/homepage.less
+++ b/homepage/homepage.less
@@ -101,6 +101,7 @@
 			margin-bottom:20px;
 			@media @small-only {margin-top:30px;}
 			.world-logo {
+				margin-left:0;
 				width:70px; margin-right:20px;
 				@media @large {width:90px;}
 			}
